2005-04-25  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_parents, automate_children) 
	(automate_graph): New automate commands.
	(automate_command): Add them.
	* commands.cc (automate): Synopsisfy them.
	* monotone.texi (Automation): Document them.
	* tests/t_automate_graph.at, test/t_parents_children.at: Test
	them.
	* testsuite.at: Add the tests.

	* tests/t_automate_ancestors.at: Remove obsolete comment.
	
2005-04-24  Derek Scherger  <derek@echologic.com>

	* tests/t_rename_file_to_dir.at:
	* tests/t_replace_file_with_dir.at:
	* tests/t_replace_dir_with_file.at: new bug reports
	* testsuite.at: include new tests

2005-04-24  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh} (app_state): add all_files flag to the constructor
	(set_all_files): new method for setting flag

	* basic_io.{cc,hh} (escape): expose public method to quote and
	escape file_paths
	(push_str_pair): use it internally

	* commands.cc (calculate_restricted_rearrangement): new function
	factored out of calculate_restricted_revision
	(calculate_restricted_revision): use new function
	(struct unknown_itemizer): rename to ...
	(struct file_itemizer): ... this; use a path_set rather than a
	manifest map; build path sets of unknown and ignored files, rather
	than simply printing them
	(ls_unknown): adjust to compensate for itemizer changes
	(print_inventory): new functions for printing inventory lines from
	path sets and rename maps
	(inventory): new command for printing inventory of working copy
	files

	* manifest.cc (inodeprint_unchanged): new function factored out
	from build_restricted_manifest_map
	(classify_paths): new function to split paths from an old manifest
	into unchanged, changed or missing sets for inventory
	(build_restricted_manifest_map): adjust to use
	inodeprint_unchanged
	* manifest.hh (classify_paths): new public function
	
	* monotone.1: document new inventory command and associated
	--all-files option
