@@ -1,3 +1,13 @@
+2005-04-27  Derek Scherger  <derek@echologic.com>
+
+	* commands.cc (ls_unknown): remove unneeded braces
+	(struct inventory_item): new struct for tracking inventories
+	(print_inventory): removed old output functions 
+	(inventory_paths): new functions for paths, data and renames
+	(inventory): rework to display two column status codes
+	* monotone.texi (Informative): update for new status codes
+	* tests/t_inventory.at: update for two column status codes
+	
 2005-04-25  Nathaniel Smith  <njs@codesourcery.com>
 
 	* automate.cc (automate_parents, automate_children) 
